--- a/package.json
+++ b/package.json
@@ -1,27 +1,58 @@
 {
-  "name": "react-simple-o2o-demo",
-  "version": "1.0.0",
-  "description": "react 模仿大众点评",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ajaywang/react-simple-o2o-demo.git"
-  },
-  "author": "ajay",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ajaywang/react-simple-o2o-demo/issues"
-  },
-  "homepage": "https://github.com/ajaywang/react-simple-o2o-demo#readme",
-  "devDependencies": {
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  }
+    "name": "react-simple-o2o-demo",
+    "version": "1.0.0",
+    "description": "react 模仿大众点评",
+    "main": "index.js",
+    "scripts": {
+        "start": "NODE_ENV=dev && webpack-dev-server --progress --colors",
+        "build": "rm -rf ./build && NODE_ENV=production webpack && --config ./webpack.production.config.js --progress --colors"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ajaywang/react-simple-o2o-demo.git"
+    },
+    "author": "ajay",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ajaywang/react-simple-o2o-demo/issues"
+    },
+    "homepage": "https://github.com/ajaywang/react-simple-o2o-demo#readme",
+    "devDependencies": {
+        "autoprefixer": "^7.1.1",
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.1.0",
+        "babel-plugin-react-transform": "^2.0.2",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.4",
+        "eslint": "^4.0.0",
+        "eslint-loader": "^1.8.0",
+        "extract-text-webpack-plugin": "^2.1.2",
+        "file-loader": "^0.11.2",
+        "html-webpack-plugin": "^2.28.0",
+        "json-loader": "^0.5.4",
+        "koa": "^2.3.0",
+        "koa-router": "^7.2.1",
+        "less": "^2.7.2",
+        "less-loader": "^4.0.4",
+        "open-browser-webpack-plugin": "0.0.5",
+        "postcss-loader": "^2.0.6",
+        "react-transform-hmr": "^1.0.4",
+        "style-loader": "^0.18.2",
+        "url-loader": "^0.5.9",
+        "webpack": "^3.0.0",
+        "webpack-dev-server": "^2.5.0"
+    },
+    "dependencies": {
+        "es6-promise": "^4.1.0",
+        "immutable": "^3.8.1",
+        "react": "^15.6.1",
+        "react-addons-css-transition-group": "^15.6.0",
+        "react-addons-pure-render-mixin": "^15.6.0",
+        "react-dom": "^15.6.1",
+        "react-redux": "^5.0.5",
+        "react-router": "^4.1.1",
+        "redux": "^3.7.0",
+        "whatwg-fetch": "^2.0.3"
+    }
 }
