调通配置文件，还要缺 css

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "react 模仿大众点评",
     "main": "index.js",
     "scripts": {
-        "start": "NODE_ENV=dev && webpack-dev-server --progress --colors",
-        "build": "rm -rf ./build && NODE_ENV=production webpack && --config ./webpack.production.config.js --progress --colors"
+        "start": "set NODE_ENV=dev && webpack-dev-server --progress --colors",
+        "build": "rm -rf ./build && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --colors"
     },
     "repository": {
         "type": "git",
