--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "css-loader": "^0.28.4",
+        "cssnano": "^3.10.0",
         "eslint": "^4.0.0",
         "eslint-loader": "^1.8.0",
         "extract-text-webpack-plugin": "^2.1.2",
@@ -35,7 +36,9 @@
         "koa-router": "^7.2.1",
         "less": "^2.7.2",
         "less-loader": "^4.0.4",
+        "memory-fs": "^0.4.1",
         "open-browser-webpack-plugin": "0.0.5",
+        "postcss-import": "^10.0.0",
         "postcss-loader": "^2.0.6",
         "react-transform-hmr": "^1.0.4",
         "style-loader": "^0.18.2",
